# solaris-automations

./: .gitignore  README.md
cli/: Cargo.toml  helper_pyth.json  order.json  order_hex.txt  settings.json  settings_devnet.json
cli/src/: instructions.rs  main.rs
cli_main/: Cargo.toml  order.json  order_base.json  order_base_2.json  order_test.json  settings.json
cli_main/src/: create_order.rs  instruction.rs  main.rs  parse_args.rs  sol_auto_program.rs
custom_get_amounts_example/: Cargo.toml
custom_get_amounts_example/src/: entrypoint.rs  error.rs  instruction.rs  processor.rs
predicate_example/: Cargo.toml
predicate_example/src/: entrypoint.rs  error.rs  instruction.rs  processor.rs
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  helpers.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs  verify_sign.rs
program/src/callbacks/: liquidation_protection.rs  mod.rs  process_callback.rs
program/src/helpers/: get_amounts.rs  lending_healthfactor.rs  mod.rs  oracle_price.rs  predicate_helpers.rs
program/tests/: fill_order.rs
