[package]
name = "solaris-auto-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.8.14"
solana-client = "1.8.14"
spl-token = "3.2.0"
arrayref = "0.3"
borsh = "0.9.1"
serde = {version = "1.0.136", features = ["derive"]} 
serde_json = "1.0"
bincode = "1.3.3"
ed25519-dalek = "1.0.1"