[package]
name = "sol-auto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
borsh = "0.9"
solana-cli-config = "1.7.8"
spl-token = "3.2.0"
solana-client = "1.7.8"
solana-sdk = "1.8.16"
anyhow = { version = "1.0.42", default-features = false }
thiserror = "1.0"
serde_json = "1.0"
serde = "1.0.136"
byteorder = "1.4.3"
bincode = "1.3.3"
rand = "0.8.5"
ed25519-dalek = "1.0.1"