[package]
name = "custom-get-amounts-example"
version = "0.1.0"
edition = "2018"
publish = false

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9"
solana-program = "1.8.14"
thiserror = "1.0.24"
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"

[lib]
crate-type = ["cdylib", "lib"]
